Updated Env and Interface
- Added metrics.
- Fixed candidates showing
- Fixed info updating.
- Cleaned code of the app.

--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "003bbb60",
    "metadata": {},
    "outputs": [],
@@ -194,12 +194,12 @@
     {
      "data": {
       "text/plain": [
-       "{'White': 0.06582533443383776,\n",
-       " 'Black': 0.6202095315373081,\n",
-       " 'Red': 4.1852543788846307e-07,\n",
-       " 'Blue': 0.046851676296656715,\n",
-       " 'Green': 0.08742154976641396,\n",
-       " 'Yellow': 8.44001946840873e-05}"
+       "{'White': 0.09470874002848481,\n",
+       " 'Black': 0.14567775022972448,\n",
+       " 'Red': 0.017433425579196523,\n",
+       " 'Blue': 0.37628387578227307,\n",
+       " 'Green': 0.6653733822187077,\n",
+       " 'Yellow': 0.006109355805172206}"
       ]
      },
      "execution_count": 3,
@@ -701,6 +701,543 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e3dd58e1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d7c7b29",
+   "metadata": {},
+   "source": [
+    "## Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "919b4623",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import sys\n",
+    "sys.path.append('..')  # Add the parent directory to the Python path\n",
+    "\n",
+    "from src.env import ShopEnv\n",
+    "from src.config import Config\n",
+    "from src.users import (\n",
+    "    CheapSeekerUser,\n",
+    "    BrandLoverUser,\n",
+    "    RandomChooserUser,\n",
+    "    ValueOptimizerUser,\n",
+    "    FamiliaritySeekerUser\n",
+    ")\n",
+    "from src.recommenders import (\n",
+    "    RandomRecommender,\n",
+    "    PopularityRecommender\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def action_to_indices(action):\n",
+    "    \"\"\"\n",
+    "    Convert the action vector to indices of selected items.\n",
+    "    \"\"\"\n",
+    "    return np.where(action == 1)[0].tolist()\n",
+    "\n",
+    "def snake_case_to_camel_case(snake_str: str) -> str:\n",
+    "    return''.join(part.capitalize() for part in snake_str.split('_'))\n",
+    "\n",
+    "def print_state_info(state):\n",
+    "    \"\"\"\n",
+    "    Print the state information in a readable format.\n",
+    "    \"\"\"\n",
+    "    print(\"User:\", state['user'])\n",
+    "    print(\"Page Count:\", state['history']['page_count'])\n",
+    "    print(\"Click Count:\", state['history']['click_count'])\n",
+    "    print(\"Buy Count:\", state['history']['buy_count'])\n",
+    "    print(\"Last Click Item:\", state['history']['last_click_item'])\n",
+    "    print(\"Consecutive No Click Pages:\", state['history']['consecutive_no_click_pages'])\n",
+    "    \n",
+    "\n",
+    "config = Config()\n",
+    "user_params = config.get(\"user_params\")\n",
+    "username_to_user = {\n",
+    "    user: globals()[snake_case_to_camel_case(user) + 'User'](user, **params)\n",
+    "    for user, params in user_params.items()\n",
+    "}\n",
+    "name_to_recommender = {\n",
+    "    \"random\": RandomRecommender(),\n",
+    "    \"popularity\": PopularityRecommender()\n",
+    "}\n",
+    "\n",
+    "items = pd.read_csv(\"../src/data/catalog.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "5e239c98",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user = username_to_user[\"familiarity_seeker\"]\n",
+    "# user = username_to_user[\"cheap_seeker\"]\n",
+    "recommender = name_to_recommender[\"random\"]\n",
+    "# recommender = name_to_recommender[\"popularity\"]\n",
+    "env = ShopEnv(items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "888d56c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "state = env.reset(user)  # Initial state\n",
+    "done = False\n",
+    "action = None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "11bc0f47",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Action indices: [38, 51, 53, 89, 169, 174, 193, 194, 201, 202], Reward: 0.30000000000000004, Done: False\n",
+      "Info: \n",
+      "CTR, BTR:(np.float64(0.1), np.float64(0.1))\n",
+      "User: familiarity_seeker\n",
+      "Page Count: 4\n",
+      "Click Count: 2\n",
+      "Buy Count: 1\n",
+      "Last Click Item: 222\n",
+      "Consecutive No Click Pages: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "while not done:\n",
+    "    candidates = state['candidates']\n",
+    "    action = recommender.recommend(state)\n",
+    "    state, reward, done, info = env.step(action, user)\n",
+    "    recommended_items = candidates.iloc[action_to_indices(action)]\n",
+    "    utility = user.utility(recommended_items)\n",
+    "    combined_df = pd.concat([recommended_items[['product_id', 'popularity', 'price']], utility], axis=1)\n",
+    "    # value = recommended_items['quality_score'] / recommended_items['price']\n",
+    "    # combined_df = pd.concat([recommended_items[['product_id', 'quality_score', 'price']], value, utility], axis=1)\n",
+    "    print(f\"Action indices: {action_to_indices(action)}, Reward: {reward}, Done: {done}\")\n",
+    "    print(f\"Info: \\nCTR, BTR:{info['click_through_rate'], info['buy_through_rate']}\")\n",
+    "    print_state_info(state)  # Print the state information\n",
+    "    break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "e4a2d55b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>category</th>\n",
+       "      <th>subcategory</th>\n",
+       "      <th>price</th>\n",
+       "      <th>quality_score</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>color</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <td>109</td>\n",
+       "      <td>Novel HP##</td>\n",
+       "      <td>Books</td>\n",
+       "      <td>Novel</td>\n",
+       "      <td>19.20</td>\n",
+       "      <td>0.800</td>\n",
+       "      <td>BrandK</td>\n",
+       "      <td>Green</td>\n",
+       "      <td>82</td>\n",
+       "      <td>2024-11-16</td>\n",
+       "      <td>Note recognize other answer development term i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>116</td>\n",
+       "      <td>Board Game JS##</td>\n",
+       "      <td>Toys</td>\n",
+       "      <td>Board Game</td>\n",
+       "      <td>41.02</td>\n",
+       "      <td>0.878</td>\n",
+       "      <td>BrandJ</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>91</td>\n",
+       "      <td>2025-03-02</td>\n",
+       "      <td>Sell type bit activity style save address serv...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>122</th>\n",
+       "      <td>123</td>\n",
+       "      <td>Yoga Mat TW##</td>\n",
+       "      <td>Sports</td>\n",
+       "      <td>Yoga Mat</td>\n",
+       "      <td>6.67</td>\n",
+       "      <td>0.021</td>\n",
+       "      <td>BrandH</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>27</td>\n",
+       "      <td>2024-09-21</td>\n",
+       "      <td>Economic money pattern wear check position edg...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>155</th>\n",
+       "      <td>156</td>\n",
+       "      <td>Cream YG##</td>\n",
+       "      <td>Beauty</td>\n",
+       "      <td>Cream</td>\n",
+       "      <td>124.49</td>\n",
+       "      <td>0.246</td>\n",
+       "      <td>BrandO</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>40</td>\n",
+       "      <td>2023-12-04</td>\n",
+       "      <td>Special building country both rest ok together...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>161</th>\n",
+       "      <td>162</td>\n",
+       "      <td>Cookbook ZY##</td>\n",
+       "      <td>Books</td>\n",
+       "      <td>Cookbook</td>\n",
+       "      <td>20.98</td>\n",
+       "      <td>0.886</td>\n",
+       "      <td>BrandF</td>\n",
+       "      <td>Yellow</td>\n",
+       "      <td>74</td>\n",
+       "      <td>2023-09-18</td>\n",
+       "      <td>Big finish within particularly suddenly yard f...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>163</th>\n",
+       "      <td>164</td>\n",
+       "      <td>Lipstick GZ##</td>\n",
+       "      <td>Beauty</td>\n",
+       "      <td>Lipstick</td>\n",
+       "      <td>27.34</td>\n",
+       "      <td>0.337</td>\n",
+       "      <td>BrandB</td>\n",
+       "      <td>Yellow</td>\n",
+       "      <td>57</td>\n",
+       "      <td>2024-01-31</td>\n",
+       "      <td>Because true technology power plant recent lit...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>174</td>\n",
+       "      <td>Doll YN##</td>\n",
+       "      <td>Toys</td>\n",
+       "      <td>Doll</td>\n",
+       "      <td>17.41</td>\n",
+       "      <td>0.569</td>\n",
+       "      <td>BrandE</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>71</td>\n",
+       "      <td>2023-10-10</td>\n",
+       "      <td>Throughout positive if turn necessary success ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <td>180</td>\n",
+       "      <td>Smartphone KV##</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>Smartphone</td>\n",
+       "      <td>10.67</td>\n",
+       "      <td>0.627</td>\n",
+       "      <td>BrandB</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>65</td>\n",
+       "      <td>2025-02-01</td>\n",
+       "      <td>Focus charge picture watch trial only break ac...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>194</th>\n",
+       "      <td>195</td>\n",
+       "      <td>Puzzle VQ##</td>\n",
+       "      <td>Toys</td>\n",
+       "      <td>Puzzle</td>\n",
+       "      <td>11.92</td>\n",
+       "      <td>0.114</td>\n",
+       "      <td>BrandN</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2025-01-11</td>\n",
+       "      <td>Reduce statement set imagine bag become east r...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>221</th>\n",
+       "      <td>222</td>\n",
+       "      <td>Smartphone PL##</td>\n",
+       "      <td>Electronics</td>\n",
+       "      <td>Smartphone</td>\n",
+       "      <td>196.45</td>\n",
+       "      <td>0.992</td>\n",
+       "      <td>BrandE</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>98</td>\n",
+       "      <td>2024-11-26</td>\n",
+       "      <td>Letter within along former plant each poor TV ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     product_id             name     category subcategory   price  \\\n",
+       "108         109       Novel HP##        Books       Novel   19.20   \n",
+       "115         116  Board Game JS##         Toys  Board Game   41.02   \n",
+       "122         123    Yoga Mat TW##       Sports    Yoga Mat    6.67   \n",
+       "155         156       Cream YG##       Beauty       Cream  124.49   \n",
+       "161         162    Cookbook ZY##        Books    Cookbook   20.98   \n",
+       "163         164    Lipstick GZ##       Beauty    Lipstick   27.34   \n",
+       "173         174        Doll YN##         Toys        Doll   17.41   \n",
+       "179         180  Smartphone KV##  Electronics  Smartphone   10.67   \n",
+       "194         195      Puzzle VQ##         Toys      Puzzle   11.92   \n",
+       "221         222  Smartphone PL##  Electronics  Smartphone  196.45   \n",
+       "\n",
+       "     quality_score   brand   color  popularity release_date  \\\n",
+       "108          0.800  BrandK   Green          82   2024-11-16   \n",
+       "115          0.878  BrandJ   Black          91   2025-03-02   \n",
+       "122          0.021  BrandH   Black          27   2024-09-21   \n",
+       "155          0.246  BrandO   Black          40   2023-12-04   \n",
+       "161          0.886  BrandF  Yellow          74   2023-09-18   \n",
+       "163          0.337  BrandB  Yellow          57   2024-01-31   \n",
+       "173          0.569  BrandE     Red          71   2023-10-10   \n",
+       "179          0.627  BrandB     Red          65   2025-02-01   \n",
+       "194          0.114  BrandN   Black          24   2025-01-11   \n",
+       "221          0.992  BrandE   Black          98   2024-11-26   \n",
+       "\n",
+       "                                           description  \n",
+       "108  Note recognize other answer development term i...  \n",
+       "115  Sell type bit activity style save address serv...  \n",
+       "122  Economic money pattern wear check position edg...  \n",
+       "155  Special building country both rest ok together...  \n",
+       "161  Big finish within particularly suddenly yard f...  \n",
+       "163  Because true technology power plant recent lit...  \n",
+       "173  Throughout positive if turn necessary success ...  \n",
+       "179  Focus charge picture watch trial only break ac...  \n",
+       "194  Reduce statement set imagine bag become east r...  \n",
+       "221  Letter within along former plant each poor TV ...  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommended_items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "b90740f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>price</th>\n",
+       "      <th>score</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>27</td>\n",
+       "      <td>107</td>\n",
+       "      <td>28.01</td>\n",
+       "      <td>0.083105</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>37</td>\n",
+       "      <td>101</td>\n",
+       "      <td>11.84</td>\n",
+       "      <td>0.227359</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>111</th>\n",
+       "      <td>112</td>\n",
+       "      <td>102</td>\n",
+       "      <td>61.01</td>\n",
+       "      <td>0.398913</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>135</th>\n",
+       "      <td>136</td>\n",
+       "      <td>108</td>\n",
+       "      <td>34.78</td>\n",
+       "      <td>0.220124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>153</th>\n",
+       "      <td>154</td>\n",
+       "      <td>107</td>\n",
+       "      <td>98.41</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>170</th>\n",
+       "      <td>171</td>\n",
+       "      <td>102</td>\n",
+       "      <td>48.01</td>\n",
+       "      <td>0.263123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>171</th>\n",
+       "      <td>172</td>\n",
+       "      <td>106</td>\n",
+       "      <td>51.13</td>\n",
+       "      <td>0.085424</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>192</th>\n",
+       "      <td>193</td>\n",
+       "      <td>103</td>\n",
+       "      <td>64.72</td>\n",
+       "      <td>0.059802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>200</th>\n",
+       "      <td>201</td>\n",
+       "      <td>110</td>\n",
+       "      <td>55.52</td>\n",
+       "      <td>0.043290</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>205</th>\n",
+       "      <td>206</td>\n",
+       "      <td>107</td>\n",
+       "      <td>128.88</td>\n",
+       "      <td>0.396652</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     product_id  popularity   price     score\n",
+       "26           27         107   28.01  0.083105\n",
+       "36           37         101   11.84  0.227359\n",
+       "111         112         102   61.01  0.398913\n",
+       "135         136         108   34.78  0.220124\n",
+       "153         154         107   98.41  0.000000\n",
+       "170         171         102   48.01  0.263123\n",
+       "171         172         106   51.13  0.085424\n",
+       "192         193         103   64.72  0.059802\n",
+       "200         201         110   55.52  0.043290\n",
+       "205         206         107  128.88  0.396652"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "combined_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c3063152",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3      0.582627\n",
+       "29          NaN\n",
+       "50          NaN\n",
+       "82          NaN\n",
+       "102         NaN\n",
+       "120         NaN\n",
+       "131         NaN\n",
+       "149         NaN\n",
+       "160         NaN\n",
+       "205         NaN\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "utility.reindex(recommended_items.index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b52b683",
    "metadata": {},
    "outputs": [],
    "source": []
