--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "0470dbac",
    "metadata": {},
    "outputs": [],
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "bcfa4ba1",
    "metadata": {},
    "outputs": [],
@@ -1491,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "5e9e284a",
    "metadata": {},
    "outputs": [
@@ -1544,7 +1544,7 @@
        "      <td>76</td>\n",
        "      <td>2025-04-30</td>\n",
        "      <td>Send situation town sea media wonder party fee...</td>\n",
-       "      <td>72</td>\n",
+       "      <td>75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1559,7 +1559,7 @@
        "      <td>92</td>\n",
        "      <td>2025-04-21</td>\n",
        "      <td>Radio sense leave real knowledge four institut...</td>\n",
-       "      <td>81</td>\n",
+       "      <td>84</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1574,7 +1574,7 @@
        "      <td>70</td>\n",
        "      <td>2024-06-14</td>\n",
        "      <td>World article describe answer economy enjoy do...</td>\n",
-       "      <td>392</td>\n",
+       "      <td>395</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1589,7 +1589,7 @@
        "      <td>27</td>\n",
        "      <td>2023-11-12</td>\n",
        "      <td>Dog reflect explain program check letter possi...</td>\n",
-       "      <td>607</td>\n",
+       "      <td>610</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1604,7 +1604,7 @@
        "      <td>17</td>\n",
        "      <td>2025-05-17</td>\n",
        "      <td>Stand guy argue interesting hot magazine any l...</td>\n",
-       "      <td>55</td>\n",
+       "      <td>58</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1626,14 +1626,14 @@
        "4          0.029  BrandE  Black          17   2025-05-17   \n",
        "\n",
        "                                         description  days_since_release  \n",
-       "0  Send situation town sea media wonder party fee...                  72  \n",
-       "1  Radio sense leave real knowledge four institut...                  81  \n",
-       "2  World article describe answer economy enjoy do...                 392  \n",
-       "3  Dog reflect explain program check letter possi...                 607  \n",
-       "4  Stand guy argue interesting hot magazine any l...                  55  "
+       "0  Send situation town sea media wonder party fee...                  75  \n",
+       "1  Radio sense leave real knowledge four institut...                  84  \n",
+       "2  World article describe answer economy enjoy do...                 395  \n",
+       "3  Dog reflect explain program check letter possi...                 610  \n",
+       "4  Stand guy argue interesting hot magazine any l...                  58  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1641,6 +1641,149 @@
    "source": [
     "catalog = load_catalog('../data/catalog.csv')\n",
     "catalog.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "43369a55",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product_id</th>\n",
+       "      <th>price</th>\n",
+       "      <th>quality_score</th>\n",
+       "      <th>popularity</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>days_since_release</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>250.000000</td>\n",
+       "      <td>250.000000</td>\n",
+       "      <td>250.000000</td>\n",
+       "      <td>250.0000</td>\n",
+       "      <td>250</td>\n",
+       "      <td>250.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>125.500000</td>\n",
+       "      <td>40.911480</td>\n",
+       "      <td>0.525812</td>\n",
+       "      <td>62.7960</td>\n",
+       "      <td>2024-06-06 10:50:52.800000</td>\n",
+       "      <td>402.548000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>4.010000</td>\n",
+       "      <td>0.001000</td>\n",
+       "      <td>12.0000</td>\n",
+       "      <td>2023-06-07 00:00:00</td>\n",
+       "      <td>55.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>63.250000</td>\n",
+       "      <td>18.557500</td>\n",
+       "      <td>0.259750</td>\n",
+       "      <td>42.0000</td>\n",
+       "      <td>2023-12-14 00:00:00</td>\n",
+       "      <td>220.250000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>125.500000</td>\n",
+       "      <td>30.140000</td>\n",
+       "      <td>0.530500</td>\n",
+       "      <td>65.0000</td>\n",
+       "      <td>2024-06-11 00:00:00</td>\n",
+       "      <td>398.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>187.750000</td>\n",
+       "      <td>51.830000</td>\n",
+       "      <td>0.790500</td>\n",
+       "      <td>83.0000</td>\n",
+       "      <td>2024-12-05 18:00:00</td>\n",
+       "      <td>578.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>250.000000</td>\n",
+       "      <td>196.450000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>110.0000</td>\n",
+       "      <td>2025-05-20 00:00:00</td>\n",
+       "      <td>768.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>72.312977</td>\n",
+       "      <td>32.573108</td>\n",
+       "      <td>0.289574</td>\n",
+       "      <td>24.0136</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>207.220562</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       product_id       price  quality_score  popularity  \\\n",
+       "count  250.000000  250.000000     250.000000    250.0000   \n",
+       "mean   125.500000   40.911480       0.525812     62.7960   \n",
+       "min      1.000000    4.010000       0.001000     12.0000   \n",
+       "25%     63.250000   18.557500       0.259750     42.0000   \n",
+       "50%    125.500000   30.140000       0.530500     65.0000   \n",
+       "75%    187.750000   51.830000       0.790500     83.0000   \n",
+       "max    250.000000  196.450000       1.000000    110.0000   \n",
+       "std     72.312977   32.573108       0.289574     24.0136   \n",
+       "\n",
+       "                     release_date  days_since_release  \n",
+       "count                         250          250.000000  \n",
+       "mean   2024-06-06 10:50:52.800000          402.548000  \n",
+       "min           2023-06-07 00:00:00           55.000000  \n",
+       "25%           2023-12-14 00:00:00          220.250000  \n",
+       "50%           2024-06-11 00:00:00          398.000000  \n",
+       "75%           2024-12-05 18:00:00          578.000000  \n",
+       "max           2025-05-20 00:00:00          768.000000  \n",
+       "std                           NaN          207.220562  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "catalog.describe()"
    ]
   },
   {
@@ -1711,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "e441d15b",
    "metadata": {},
    "outputs": [],
@@ -1721,7 +1864,7 @@
     "# value_optimizer = ValueOptimizerUser(\"user_C\", 0.2, 0.4)\n",
     "# familiarity_seeker = FamiliaritySeekerUser(\"user_D\", 0.6, 0.8)\n",
     "# random_chooser = RandomChooserUser(\"user_E\", 0.85, 0.97)\n",
-    "freshness_looker = FreshnessLookerUser(\"freshness_looker\", 0.8, 0.95)"
+    "freshness_looker = FreshnessLookerUser(\"freshness_looker\", 0.40, 0.65, decay_rate=0.005)"
    ]
   },
   {
@@ -1743,7 +1886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "2e8169ec",
    "metadata": {},
    "outputs": [],
@@ -1758,7 +1901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "02205331",
    "metadata": {},
    "outputs": [
@@ -1766,7 +1909,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CTR: 0.21, BTR: 0.13\n"
+      "CTR: 0.20, BTR: 0.12\n"
      ]
     }
    ],
