--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -2018,7 +2018,7 @@
        "      <td>76</td>\n",
        "      <td>2025-04-30</td>\n",
        "      <td>Send situation town sea media wonder party fee...</td>\n",
-       "      <td>90</td>\n",
+       "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2033,7 +2033,7 @@
        "      <td>92</td>\n",
        "      <td>2025-04-21</td>\n",
        "      <td>Radio sense leave real knowledge four institut...</td>\n",
-       "      <td>99</td>\n",
+       "      <td>109</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2048,7 +2048,7 @@
        "      <td>70</td>\n",
        "      <td>2024-06-14</td>\n",
        "      <td>World article describe answer economy enjoy do...</td>\n",
-       "      <td>410</td>\n",
+       "      <td>420</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -2063,7 +2063,7 @@
        "      <td>27</td>\n",
        "      <td>2023-11-12</td>\n",
        "      <td>Dog reflect explain program check letter possi...</td>\n",
-       "      <td>625</td>\n",
+       "      <td>635</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -2078,7 +2078,7 @@
        "      <td>17</td>\n",
        "      <td>2025-05-17</td>\n",
        "      <td>Stand guy argue interesting hot magazine any l...</td>\n",
-       "      <td>73</td>\n",
+       "      <td>83</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2100,11 +2100,11 @@
        "4          0.029  BrandE  Black          17   2025-05-17   \n",
        "\n",
        "                                         description  days_since_release  \n",
-       "0  Send situation town sea media wonder party fee...                  90  \n",
-       "1  Radio sense leave real knowledge four institut...                  99  \n",
-       "2  World article describe answer economy enjoy do...                 410  \n",
-       "3  Dog reflect explain program check letter possi...                 625  \n",
-       "4  Stand guy argue interesting hot magazine any l...                  73  "
+       "0  Send situation town sea media wonder party fee...                 100  \n",
+       "1  Radio sense leave real knowledge four institut...                 109  \n",
+       "2  World article describe answer economy enjoy do...                 420  \n",
+       "3  Dog reflect explain program check letter possi...                 635  \n",
+       "4  Stand guy argue interesting hot magazine any l...                  83  "
       ]
      },
      "execution_count": 3,
@@ -2798,18 +2798,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f6de6113",
+   "execution_count": null,
+   "id": "8715cb94",
    "metadata": {},
    "outputs": [],
    "source": [
-    "rl_recommender = RLRecommender()\n",
-    "rl_recommender.load_model('../models/fc_nu1_cs50_nr5_run2.zip')"
+    "config['shuffle_count'] = 2\n",
+    "config['shuffle_frequency'] = 20\n",
+    "\n",
+    "env = ShopEnv(catalog, username_to_user['brand_lover'], config=config)\n",
+    "state, info = env.reset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "id": "f6de6113",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rl_recommender_fc = RLRecommender()\n",
+    "rl_recommender_fc.load_model('../models/fc_nu6_cs50_nr5_run5')\n",
+    "\n",
+    "rl_recommender_rc = RLRecommender()\n",
+    "rl_recommender_rc.load_model('../models/rc_nu6_cs50_nr5_run3')\n",
+    "\n",
+    "name_to_recommender['rl_recommender_fc'] = rl_recommender_fc\n",
+    "name_to_recommender['rl_recommender_rc'] = rl_recommender_rc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "a028b71d",
    "metadata": {},
    "outputs": [],
@@ -2842,6 +2862,152 @@
     "    average_btr = np.mean(total_btr)\n",
     "    average_page_count = np.mean(total_page_counts)\n",
     "    return average_reward, average_ctr, average_btr, average_page_count, total_done_conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "754fc3f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_results(recommender_name, num_recommendations, num_episodes):\n",
+    "    reward, ctr, btr, page_count, done_stats = evaluate_recommender(name_to_recommender[recommender_name], env, num_recommendations=num_recommendations, num_episodes=num_episodes)\n",
+    "    print(f\"[{recommender_name}] Average Reward over {num_episodes} episodes: {reward:.2f}\")\n",
+    "    print(f\"[{recommender_name}] Average CTR over {num_episodes} episodes: {ctr:.2f}\")\n",
+    "    print(f\"[{recommender_name}] Average BTR over {num_episodes} episodes: {btr:.2f}\")\n",
+    "    print(f\"[{recommender_name}] Average Page Count over {num_episodes} episodes: {page_count:.2f}\")\n",
+    "    print(f\"[{recommender_name}] Average Done Conditions over {num_episodes} episodes: {done_stats}\")\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "39a5f129",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[random] Average Reward over 100 episodes: 6.30\n",
+      "[random] Average CTR over 100 episodes: 0.20\n",
+      "[random] Average BTR over 100 episodes: 0.09\n",
+      "[random] Average Page Count over 100 episodes: 8.29\n",
+      "[random] Average Done Conditions over 100 episodes: [13 36 35 28]\n",
+      "\n",
+      "[popularity] Average Reward over 100 episodes: 7.42\n",
+      "[popularity] Average CTR over 100 episodes: 0.20\n",
+      "[popularity] Average BTR over 100 episodes: 0.11\n",
+      "[popularity] Average Page Count over 100 episodes: 8.72\n",
+      "[popularity] Average Done Conditions over 100 episodes: [ 0 45 45 63]\n",
+      "\n",
+      "[rl_recommender_fc] Average Reward over 100 episodes: 10.61\n",
+      "[rl_recommender_fc] Average CTR over 100 episodes: 0.41\n",
+      "[rl_recommender_fc] Average BTR over 100 episodes: 0.24\n",
+      "[rl_recommender_fc] Average Page Count over 100 episodes: 4.69\n",
+      "[rl_recommender_fc] Average Done Conditions over 100 episodes: [ 0  0 46 83]\n",
+      "\n",
+      "[rl_recommender_rc] Average Reward over 100 episodes: 6.08\n",
+      "[rl_recommender_rc] Average CTR over 100 episodes: 0.21\n",
+      "[rl_recommender_rc] Average BTR over 100 episodes: 0.09\n",
+      "[rl_recommender_rc] Average Page Count over 100 episodes: 8.31\n",
+      "[rl_recommender_rc] Average Done Conditions over 100 episodes: [10 41 32 30]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_episodes = 100\n",
+    "num_recommendations = config.get('num_recommendations', 5)\n",
+    "config['shuffle_count'] = 2\n",
+    "config['shuffle_frequency'] = 100 # no shuffling during the evaluation\n",
+    "\n",
+    "env = ShopEnv(catalog, username_to_user['brand_lover'], config=config)\n",
+    "state, info = env.reset()\n",
+    "\n",
+    "# During 100 episodes only 10 items were shuffled -> almost static product placement\n",
+    "print_results('random', num_recommendations=num_recommendations, num_episodes=num_episodes)\n",
+    "print_results('popularity', num_recommendations=num_recommendations, num_episodes=num_episodes)\n",
+    "print_results('rl_recommender_fc', num_recommendations=num_recommendations, num_episodes=num_episodes)\n",
+    "print_results('rl_recommender_rc', num_recommendations=num_recommendations, num_episodes=num_episodes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c13adffc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[random] Average Reward over 100 episodes: 6.11\n",
+      "[random] Average CTR over 100 episodes: 0.20\n",
+      "[random] Average BTR over 100 episodes: 0.08\n",
+      "[random] Average Page Count over 100 episodes: 7.91\n",
+      "[random] Average Done Conditions over 100 episodes: [15 32 46 30]\n",
+      "\n",
+      "[popularity] Average Reward over 100 episodes: 7.50\n",
+      "[popularity] Average CTR over 100 episodes: 0.20\n",
+      "[popularity] Average BTR over 100 episodes: 0.11\n",
+      "[popularity] Average Page Count over 100 episodes: 8.60\n",
+      "[popularity] Average Done Conditions over 100 episodes: [ 0 42 42 70]\n",
+      "\n",
+      "[rl_recommender_fc] Average Reward over 100 episodes: 5.61\n",
+      "[rl_recommender_fc] Average CTR over 100 episodes: 0.19\n",
+      "[rl_recommender_fc] Average BTR over 100 episodes: 0.09\n",
+      "[rl_recommender_fc] Average Page Count over 100 episodes: 7.54\n",
+      "[rl_recommender_fc] Average Done Conditions over 100 episodes: [27 30 35 25]\n",
+      "\n",
+      "[rl_recommender_rc] Average Reward over 100 episodes: 6.08\n",
+      "[rl_recommender_rc] Average CTR over 100 episodes: 0.20\n",
+      "[rl_recommender_rc] Average BTR over 100 episodes: 0.09\n",
+      "[rl_recommender_rc] Average Page Count over 100 episodes: 7.88\n",
+      "[rl_recommender_rc] Average Done Conditions over 100 episodes: [18 34 36 33]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_episodes = 100\n",
+    "num_recommendations = config.get('num_recommendations', 5)\n",
+    "config['shuffle_count'] = 25\n",
+    "config['shuffle_frequency'] = 1 # no shuffling during the evaluation\n",
+    "\n",
+    "env = ShopEnv(catalog, username_to_user['brand_lover'], config=config)\n",
+    "state, info = env.reset()\n",
+    "\n",
+    "# During 100 episodes only 10 items were shuffled -> almost static product placement\n",
+    "print_results('random', num_recommendations=num_recommendations, num_episodes=num_episodes)\n",
+    "print_results('popularity', num_recommendations=num_recommendations, num_episodes=num_episodes)\n",
+    "print_results('rl_recommender_fc', num_recommendations=num_recommendations, num_episodes=num_episodes)\n",
+    "print_results('rl_recommender_rc', num_recommendations=num_recommendations, num_episodes=num_episodes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f888e102",
+   "metadata": {},
+   "source": [
+    "Random candidates model shows worse results than fixed candidates model on fixed candidates. RC looks a bit better of fully shuffled candidates. Overall both doens't surpass random recommendations model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ab5f1cf",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "self.done_criteria = {\n",
+    "            \"consecutive_no_click_pages\": 3,  \n",
+    "            \"page_count\": 10,                  \n",
+    "            \"click_count\": 10,                 \n",
+    "            \"buy_count\": 5                      \n",
+    "        }\n",
+    "```"
    ]
   },
   {
@@ -2902,21 +3068,6 @@
     "print(f\"[RL] Average Page Count over {num_episodes} episodes: {rl_page_count:.2f}\")\n",
     "print(f\"[RL] Average Done Conditions over {num_episodes} episodes: {rl_done_stats}\")\n",
     "print()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6ab5f1cf",
-   "metadata": {},
-   "source": [
-    "```python\n",
-    "self.done_criteria = {\n",
-    "            \"consecutive_no_click_pages\": 3,  \n",
-    "            \"page_count\": 10,                  \n",
-    "            \"click_count\": 10,                 \n",
-    "            \"buy_count\": 5                      \n",
-    "        }\n",
-    "```"
    ]
   }
  ],
